--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,27 @@
-#Workflow name
+#Nombre del Workflow
 name: CI/CD Pipeline
 on:
-  #Manually trigger workflow runs
   workflow_dispatch:
-  #Trigger the workflow on push from the main branch
+  #Iniciar el workflow al hacer push a la rama indicada
   push:
     branches:
-      - main
+      - realizar-solicitudes-servicios
 jobs:
-  #Test's job
+  #Tests job
   tests:
     name: Unit tests
-    #Run on Ubuntu using the latest version
+    #Correr en una MV ubuntu en su última versión
     runs-on: ubuntu-latest
-    #Job's steps
+    #Pasos del Job
     steps:
-      #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
       - uses: actions/checkout@v1
-      #Set up JDK 11
+      #Set up JDK 20
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
           java-version: '20'
       #Set up Maven cache
       - name: Cache Maven packages
-        #This action allows caching dependencies and build outputs to improve workflow execution time.
         uses: actions/cache@v1
         with:
           path: ~/.m2
@@ -33,3 +30,35 @@ jobs:
       #Run Tests
       - name: Run Tests
         run: mvn -B test
+
+  #Build job
+  build:
+    #Depends on sonar's job
+    needs: tests
+    name: Build
+    #Correr en una MV ubuntu en su última versión
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      #Set up JDK 20
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: '20'
+      #Set up Maven cache
+      - name: Cache Maven packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      #Build a la aplicación usando Maven
+      - name: Build with Maven
+        run: mvn -B package -DskipTests --file pom.xml
+      - name: Upload JAR
+        uses: actions/upload-artifact@v2
+        with:
+          #Set nombre del artefacto
+          name: artifact
+          #Lo extrae de esta ruta
+          path: target/ssmu-api-0.0.1-SNAPSHOT.jar
