--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
     properties:
       hibernate:
         order_inserts: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.Oracle12cDialect
         jdbc:
           batch_size: 50
           lob:
@@ -17,9 +17,10 @@ spring:
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/ssmu-dev?serverTimezone=America/Bogota
-    username: username
+    url: jdbc:oracle:thin:@localhost:1521/xepdb1
+    username: usuario_base
     password: password
+    driver-class-name: oracle.jdbc.OracleDriver
     hikari:
       idle-timeout: 10000
       maximum-pool-size: 5
