--- a/src/main/resources/application-h2.yml
+++ b/src/main/resources/application-h2.yml
@@ -35,6 +35,15 @@ ssmu-api:
     dev-url: http://localhost:8080/ssmu-api
     prod-url: https://ssmu-api.com
 
+springdoc:
+  swagger-ui:
+    path: /doc/swagger-ui.html # Ruta de acceso para la interfaz de Swagger-UI
+  api-docs:
+    enabled: true # Habilitar la generación de documentación OpenAPI
+    path: /v3/api-docs # Ruta de acceso para los documentos OpenAPI
+  show-actuator: true # Habilitar la visualización de los endpoints de actuator
+  version: 3.0.0 # Versión de OpenAPI
+
 logging:
   level:
     root: DEBUG
