--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,18 +7,19 @@ spring:
       hibernate:
         order_inserts: true
         dialect: org.hibernate.dialect.Oracle12cDialect
+        enhancer:
+          enable: false
         jdbc:
           batch_size: 50
           lob:
             non_contextual_creation: true
-        default_schema: public
         temp:
           use_jdbc_metadata_defaults: false
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:oracle:thin:@localhost:1521/xepdb1
-    username: usuario_base
+    username: ssmu_dev
     password: password
     driver-class-name: oracle.jdbc.OracleDriver
     hikari:
@@ -35,7 +36,7 @@ ssmu-api:
 
 springdoc:
   swagger-ui:
-    path: /swagger-ui.html # Ruta de acceso para la interfaz de Swagger-UI
+    path: /doc/swagger-ui.html # Ruta de acceso para la interfaz de Swagger-UI
   api-docs:
     enabled: true # Habilitar la generación de documentación OpenAPI
     path: /v3/api-docs # Ruta de acceso para los documentos OpenAPI
